[maven] MavenAsyncProjectsManager.scheduleUpdateMavenProjects
GitOrigin-RevId: 361d9f2db35fcdd00384df728716a5b6e06966da